@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)dpost.c	1.135 (gritter) 2/13/06
+ * Sccsid @(#)dpost.c	1.136 (gritter) 2/17/06
  */
 
 /*
@@ -2354,11 +2354,11 @@ ple32(const char *cp)
 
 static const char ps_adobe_font_[] = "%!PS-AdobeFont-";
 static const char ps_truetypefont_[] = "%!PS-TrueTypeFont-";
+static const char hex[] = "0123456789abcdef";
 
 static void
 supplypfb(char *font, char *path, FILE *fp)
 {
-    const char	hex[] = "0123456789abcdef";
     char	buf[30];
     long	length;
     int	i, c = EOF, n, type = 0, lastc = EOF;
@@ -2449,7 +2449,9 @@ supplyotf(char *font, char *path, FILE *fp)
 	struct stat	st;
 	char	*contents;
 	size_t	size, offset, length;
+	int	i;
 	int	fsType;
+	const char StartData[] = " StartData ";
 
 	if (fstat(fileno(fp), &st) < 0)
 		error(FATAL, "cannot stat %s", path);
@@ -2477,11 +2479,20 @@ supplyotf(char *font, char *path, FILE *fp)
         	fprintf(sf, "%%%%+ font %s\n", font);
 	fprintf(rf, "%%%%BeginResource: font %s\n", font);
 	fprintf(rf, "/FontSetInit /ProcSet findresource begin\n");
-	fprintf(rf, "%%%%BeginData: %ld Binary Bytes\n",
-			(long)(length + 13 + strlen(font) + 12));
-	fprintf(rf, "/%s %12d StartData ", font, length);
-	fwrite(&contents[offset], 1, length, rf);
-	fprintf(rf, "\n%%%%EndData\n");
+	fprintf(rf, "/%s %d ", font, length);
+	fprintf(rf, "currentfile /ASCIIHexDecode filter cvx exec\n");
+	for (i = 0; StartData[i]; i++) {
+		putc(hex[(StartData[i]&0360)>>4], rf);
+		putc(hex[StartData[i]&017], rf);
+	}
+	putc('\n', rf);
+	for (i = offset; i < offset+length; i++) {
+		putc(hex[(contents[i]&0360)>>4], rf);
+		putc(hex[contents[i]&017], rf);
+		if (i > offset && (i - offset + 1) % 34 == 0)
+			putc('\n', rf);
+	}
+	fprintf(rf, ">\n");
 	fprintf(rf, "%%%%EndResource\n");
 	free(contents);
 	got_otf = 1;
